Integrate dprint-plugin-prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,4 @@
 {
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "dprint.dprint",
-  "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[css]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  "editor.defaultFormatter": "dprint.dprint"
 }
