--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>kachick/renovate-config-dprint"
+    "github>kachick/renovate-config-dprint"
   ],
-  "labels": [
-    "renovate"
-  ],
+  "labels": ["dependencies", "renovate"],
+  "automerge": true,
   "enabledManagers": ["regex"]
 }
