--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: Lint
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths-ignore:
       - 'LICENSE'
   pull_request:
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: dprint/check@v2.0
       - uses: actions/setup-node@v3
         with:
           node-version: 18
