--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
       - name: 'Dependency Review'
         # Workaround for https://github.com/actions/dependency-review-action/pull/131
-        uses: kachick/dependency-review-action@04e370c54afd1458f6fb9499256a5975c86a98ce
+        uses: kachick/dependency-review-action@v2
         with:
           # https://spdx.org/licenses/
           allow-licenses: MIT, BSD-3-Clause, BSD-2-Clause, 0BSD, Unlicense, ISC, Apache-2.0, CC0-1.0, CC-BY-3.0
