--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,29 +8,20 @@ on:
     paths-ignore:
       - 'LICENSE'
 jobs:
-  build:
+  css:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: npm
+      - name: Install dependencies
+        run: npm ci --ignore-scripts
+      - run: npm run lint
+
+  dprint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: Get npm cache directory
-        id: npm-cache-dir
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v3
-        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
-        with:
-          path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-      - if: ${{ steps.npm-cache.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: npm list
-      - name: install dependencies
-        run: npm install
-      - run: npm run lint
