--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>kachick/renovate-config-dprint"
+    "github>kachick/renovate-config-asdf#1.4.1",
+    "github>kachick/renovate-config-asdf:self",
+    "github>kachick/renovate-config-dprint:plugins"
   ],
   "labels": ["dependencies", "renovate"],
   "automerge": true,
