--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,13 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
+      - name: asdf_install
+        uses: asdf-vm/actions/install@v1
       - name: Install dependencies
-        run: npm ci --ignore-scripts
-      - run: npm run lint
+        run: bun install
+      - run: bun run lint
 
   dprint:
     runs-on: ubuntu-latest
