--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,8 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      # https://github.com/asdf-vm/asdf-plugins/pull/691
+      - name: Exclude dprint from .tool-versions
+        id: useable-tool-versions
+        run: echo "USEABLE_TOOL_VERSIONS=$(grep -v dprint .tool-versions)" >> $GITHUB_OUTPUT
       - name: asdf_install
         uses: asdf-vm/actions/install@v1
+        with:
+          tool_versions: ${{ steps.useable-tool-versions.outputs.USEABLE_TOOL_VERSIONS }}
       - name: Install dependencies
         run: bun install
       - run: bun run lint
