Is this needed for bun?
https://github.com/kachick/kachick.github.io/actions/runs/3254782236/jobs/5343420592#step:6:9

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Kenichi Kamiya <kachick1@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "stylelint **/*.css",
+    "lint": "bun run stylelint **/*.css",
     "format:check": "dprint check",
     "format:fix": "dprint fmt",
     "ci": "bun run lint && bun run format:check"
