Prefer setup-* actions rather than asdf action for bun

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,24 +8,31 @@ on:
     paths-ignore:
       - 'LICENSE'
 jobs:
+  asdf-parser:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@v3
+      - uses: kachick/action-parse-asdf-tool-versions@v1
+        id: parse
+    outputs:
+      tool-versions: '${{ steps.parse.outputs.json }}'
   css:
+    needs: [asdf-parser]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # https://github.com/asdf-vm/asdf-plugins/pull/691
-      - name: Exclude dprint from .tool-versions
-        id: useable-tool-versions
-        run: echo "USEABLE_TOOL_VERSIONS=$(grep -v dprint .tool-versions)" >> $GITHUB_OUTPUT
-      - name: asdf_install
-        uses: asdf-vm/actions/install@v1
+      - uses: antongolub/action-setup-bun@v1
         with:
-          tool_versions: ${{ steps.useable-tool-versions.outputs.USEABLE_TOOL_VERSIONS }}
-      - name: Install dependencies
-        run: bun install
+          bun-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).bun }}'
+      - run: bun install
       - run: bun run lint
 
   dprint:
+    needs: [asdf-parser]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.1
+        with:
+          dprint-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).dprint }}'
