Use GitHub Actions to deploy pages

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "framework": {
     "displayName": ":)",
-    "static": "docs"
+    "static": "public"
   },
   "scripts": {
     "lint": "bun run stylelint **/*.css",
