--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "ci": "bun run lint && bun run format:check"
   },
   "devDependencies": {
+    "bun-types": "^0.4.0",
+    "dprint": "^0.34.1",
     "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^29.0.0",
-    "bun-types": "^0.4.0"
+    "stylelint-config-standard": "^29.0.0"
   },
   "name": "kachick.github.io",
   "type": "module"
