--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,7 @@ on:
     branches: ['main']
     paths:
       - '.github/workflows/pages.yml'
-      - 'src/**'
+      - 'public/**'
       - 'package.json'
     # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
