--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: kachick/action-parse-asdf-tool-versions@main
         id: parse
+        env:
+          working-directory: ${{ github.action_path }}
     outputs:
       tool-versions: '${{ steps.parse.outputs.json }}'
   css:
