Replace bun with deno for supporting stylelint

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,25 +8,14 @@ on:
     paths-ignore:
       - 'LICENSE'
 jobs:
-  asdf-parser:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v3
-      - uses: kachick/action-parse-asdf-tool-versions@v3
-        id: parse
-    outputs:
-      tool-versions: '${{ steps.parse.outputs.json }}'
   css:
-    needs: [asdf-parser]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: antongolub/action-setup-bun@v1
+      - uses: denoland/setup-deno@v1
         with:
-          bun-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).bun }}'
-      - run: bun install
-      - run: bun run lint
+          deno-version: v1.29.3
+      - run: deno run --node-modules-dir --allow-env --allow-read npm:stylelint '**/*.css'
 
   dprint:
     runs-on: ubuntu-latest
