--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "dprint.dprint",
-    "stylelint.vscode-stylelint"
+    "stylelint.vscode-stylelint",
+    "denoland.vscode-deno"
   ]
 }
