--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "dprint.dprint",
   "cSpell.words": [
-    "antongolub"
+    "antongolub",
+    "deno",
+    "denoland"
   ]
 }
