--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,8 @@
     "github>kachick/renovate-config-dprint:plugins"
   ],
   "labels": ["dependencies", "renovate"],
-  "enabledManagers": ["asdf", "regex"]
+  "enabledManagers": ["nix", "regex"],
+  "nix": {
+    "enabled": true
+  }
 }
