--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.29.3
+      # https://github.com/denoland/deno/issues/16901
+      - run: deno cache --reload npm:stylelint
       - run: deno run --node-modules-dir --allow-env --allow-read npm:stylelint '**/*.css'
 
   dprint:
