--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,8 @@ jobs:
           deno-version: v1.29.3
       # https://github.com/denoland/deno/issues/16901
       - run: deno cache --node-modules-dir npm:stylelint npm:stylelint-config-standard npm:stylelint-config-prettier
-      - run: deno run --node-modules-dir --allow-env --allow-read npm:stylelint '**/*.css'
+      # - run: deno run --node-modules-dir --allow-env --allow-read npm:stylelint '**/*.css'
+      - run: deno run --node-modules-dir --allow-env --allow-read stylelint.ts public/main.css
 
   dprint:
     runs-on: ubuntu-latest
