Replace bun with deno for supporting stylelint without nodejs (#61)
* Replace bun with deno for supporting stylelint

* Is this needed?

* Is this?

* deno returns 0 for failed commands...

* This works. However still returns 0 for exit code

* Tired from deno and nodejs process comapt...

* Fix to handle unbuffer command

* Is this work?

* Fix line ending

* Extract to script file

* Add comment

* Can not be used?

* Remove testing code

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,25 +8,16 @@ on:
     paths-ignore:
       - 'LICENSE'
 jobs:
-  asdf-parser:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v3
-      - uses: kachick/action-parse-asdf-tool-versions@v3
-        id: parse
-    outputs:
-      tool-versions: '${{ steps.parse.outputs.json }}'
   css:
-    needs: [asdf-parser]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: antongolub/action-setup-bun@v1
+      - uses: denoland/setup-deno@v1
         with:
-          bun-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).bun }}'
-      - run: bun install
-      - run: bun run lint
+          deno-version: v1.29.3
+      # https://github.com/denoland/deno/issues/16901
+      - run: deno cache --node-modules-dir npm:stylelint npm:stylelint-config-standard npm:stylelint-config-prettier
+      - run: ./stylelint.bash
 
   dprint:
     runs-on: ubuntu-latest
