--- a/.github/workflows/merge-bot-pr.yml
+++ b/.github/workflows/merge-bot-pr.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   dependabot:
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
