--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "editorconfig.editorconfig",
     "dprint.dprint",
     "stylelint.vscode-stylelint",
-    "denoland.vscode-deno"
+    "denoland.vscode-deno",
+    "jnoortheen.nix-ide"
   ]
 }
