--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "github>kachick/renovate-config-dprint:plugins"
-  ],
   "labels": ["dependencies", "renovate"],
-  "enabledManagers": ["nix", "regex"],
+  "enabledManagers": ["nix"],
   "nix": {
     "enabled": true
   }
