--- a/.github/workflows/dprint-update-plugin.yml
+++ b/.github/workflows/dprint-update-plugin.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - '.github/workflows/dprint-update-plugin.yml'
   schedule:
-    - cron: '0 17 * * *'
+    # Run at 17:00 UTC every Monday
+    - cron: '0 17 * * 1'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -15,7 +16,7 @@ permissions:
 
 # Allow one concurrent updates
 concurrency:
-  group: 'dprint'
+  group: 'update-dprint'
   cancel-in-progress: true
 
 jobs:
@@ -27,7 +28,6 @@ jobs:
         uses: kachick/action-update-dprint-plugins@v1.0.0
         with:
           base-branch: 'main'
-          github-token: '${{ secrets.GITHUB_TOKEN }}'
       # Enable `Allow auto-merge` in your repository settings if you need following steps
       - name: Merge sent PR
         # Merge if `dprint fmt` does not make any diff even after updating plugins
