--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.2
+        with:
+          # Keep same version as used in *.nix
+          dprint-version: '0.37.1'
       - uses: denoland/setup-deno@v1
         with:
           deno-version: v1.34.2
