--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.34.2
+          # Keep same version as used in *.nix
+          deno-version: v1.35.2
       - run: deno task stylelint
 
   check:
@@ -23,8 +24,9 @@ jobs:
       - uses: dprint/check@v2.2
         with:
           # Keep same version as used in *.nix
-          dprint-version: '0.37.1'
+          dprint-version: '0.39.1'
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.34.2
+          # Keep same version as used in *.nix
+          deno-version: v1.35.2
       - run: deno task check
