--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,7 +4,7 @@
     "check": "dprint check && deno fmt --check && deno lint && deno check scripts/*.ts",
     // If you want to keep stylelint color print in local, Use `unbuffer deno run --node-modules-dir ...`
     "stylelint": "deno task cache && deno run --node-modules-dir --allow-env --allow-read --allow-sys npm:stylelint@15.9.0/stylelint **/*.css | deno run --allow-sys scripts/isEmpty.ts",
-    "dependencies": "deno --version && dprint --version",
+    "deps": "nix --version && nil --version && deno --version && dprint --version",
     "cache": "deno cache --node-modules-dir npm:stylelint@15.9.0 npm:stylelint-config-recommended@12.0.0"
   },
   "lint": {
