--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
         with:
-          # Keep same version as used in *.nix
-          deno-version: v1.36.0
+          deno-version: '1.36.0' # selfup { "regex": "\\d[^']+", "script": "deno --version | head -n 1 | cut -d ' ' -f 2" }
       - run: deno task stylelint
 
   check:
@@ -23,10 +22,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dprint/check@v2.2
         with:
-          # Keep same version as used in *.nix
-          dprint-version: '0.40.0'
+          dprint-version: '0.40.0' # selfup { "regex": "\\d[^']+", "script": "dprint --version | cut -d ' ' -f 2" }
       - uses: denoland/setup-deno@v1
         with:
-          # Keep same version as used in *.nix
-          deno-version: v1.36.0
+          deno-version: '1.36.0' # selfup { "regex": "\\d[^']+", "script": "deno --version | head -n 1 | cut -d ' ' -f 2" }
       - run: deno task check
