Auto merge Nix related actions even for major updates
#109

They release major updates on a frequent basis

--- a/.github/workflows/merge-bot-pr.yml
+++ b/.github/workflows/merge-bot-pr.yml
@@ -21,7 +21,7 @@ jobs:
         uses: kachick/wait-other-jobs@v2
         timeout-minutes: 10
       - name: Approve and merge
-        if: ${{steps.metadata.outputs.update-type != 'version-update:semver-major'}}
+        if: ${{steps.metadata.outputs.update-type != 'version-update:semver-major' || contains(steps.metadata.outputs.dependency-names, 'DeterminateSystems')}}
         run: gh pr review --approve "$PR_URL" && gh pr merge --auto --squash "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
