--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,8 @@ updates:
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
-      interval: 'daily'
-      time: '10:00'
-      timezone: 'Asia/Tokyo'
+      interval: 'weekly'
+    groups:
+      DeterminateSystems-actions:
+        patterns:
+          - 'DeterminateSystems*'
