--- a/deno.jsonc
+++ b/deno.jsonc
@@ -5,7 +5,8 @@
     // If you want to keep stylelint color print in local, Use `unbuffer deno run --node-modules-dir ...`
     "stylelint": "deno task cache && deno run --node-modules-dir --allow-env --allow-read --allow-sys npm:stylelint@16.2.1/stylelint **/*.css | deno run --allow-sys scripts/isEmpty.ts",
     "deps": "nix --version && nil --version && deno --version && dprint --version",
-    "cache": "deno cache --node-modules-dir npm:stylelint@16.2.1 npm:stylelint-config-recommended@14.0.0"
+    "cache": "deno cache --node-modules-dir npm:stylelint@16.2.1 npm:stylelint-config-recommended@14.0.0",
+    "fmt": "deno fmt && dprint fmt && nix fmt ./*.nix"
   },
   "lint": {
     "include": ["scripts/"],
