--- a/.github/workflows/merge-bot-pr.yml
+++ b/.github/workflows/merge-bot-pr.yml
@@ -32,6 +32,14 @@ jobs:
     steps:
       - name: Wait other jobs
         uses: kachick/wait-other-jobs@v3
+        with:
+          skip-same-workflow: 'true'
+          skip-list: |
+            [
+              {
+                "workflowFile": "pages.yml"
+              }
+            ]
         timeout-minutes: 10
       - name: Approve and merge
         run: gh pr review --approve "$PR_URL" && gh pr merge --auto --squash --delete-branch "$PR_URL"
@@ -52,6 +60,14 @@ jobs:
     steps:
       - name: Wait other jobs
         uses: kachick/wait-other-jobs@v3
+        with:
+          skip-same-workflow: 'true'
+          skip-list: |
+            [
+              {
+                "workflowFile": "pages.yml"
+              }
+            ]
         timeout-minutes: 10
       - name: Approve and merge
         run: gh pr review --approve "$PR_URL" && gh pr merge --auto --squash --delete-branch "$PR_URL"
@@ -67,6 +83,14 @@ jobs:
     steps:
       - name: Wait other jobs
         uses: kachick/wait-other-jobs@v3
+        with:
+          skip-same-workflow: 'true'
+          skip-list: |
+            [
+              {
+                "workflowFile": "pages.yml"
+              }
+            ]
         timeout-minutes: 20
       - name: Approve and merge
         run: gh pr review --approve "$PR_URL" && gh pr merge --auto --delete-branch --squash "$PR_URL"
