--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,6 +30,13 @@ jobs:
       - uses: actions/checkout@v4
       - name: Wait other jobs
         uses: kachick/wait-other-jobs@v3
+        with:
+          skip-list: |
+            [
+              {
+                "workflowFile": "merge-bot-pr.yml"
+              }
+            ]
         timeout-minutes: 10
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
