--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,6 +34,10 @@ jobs:
           skip-list: |
             [
               {
+                "workflowFile": "pages.yml",
+                "jobName": "Build and deploy"
+              },
+              {
                 "workflowFile": "merge-bot-pr.yml"
               }
             ]
