Pin version and ignore broken versions for dependency-review-action
See https://github.com/kachick/kachick.github.io/pull/148

Import https://github.com/kachick/anylang-template/commit/ef7a3738fc0443bedd13a2cf049c7a5f60e9d35b

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,14 @@ updates:
     directory: '/'
     schedule:
       interval: 'weekly'
+    ignore:
+      - dependency-name: 'actions/dependency-review-action'
+        versions:
+          # https://github.com/actions/dependency-review-action/issues/759
+          - '4.3.1'
+          - '4.3.0'
+          # https://github.com/actions/dependency-review-action/issues/493
+          - '3.0.5'
     groups:
       DeterminateSystems-actions:
         patterns:
