--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,16 +6,16 @@
     "stylelint": "deno task cache && deno run --node-modules-dir --allow-env --allow-read --allow-sys npm:stylelint@16.2.1/stylelint **/*.css | deno run --allow-sys scripts/isEmpty.ts",
     "deps": "nix --version && nil --version && deno --version && dprint --version",
     "cache": "deno cache --node-modules-dir npm:stylelint@16.2.1 npm:stylelint-config-recommended@14.0.0",
-    "fmt": "deno fmt && dprint fmt && nix fmt ./*.nix"
+    "fmt": "deno fmt && dprint fmt && nix fmt ./*.nix",
   },
   "lint": {
     "include": ["scripts/"],
     "rules": {
-      "tags": ["recommended"]
-    }
+      "tags": ["recommended"],
+    },
   },
   "fmt": {
     "singleQuote": true,
-    "include": ["scripts/"]
-  }
+    "include": ["scripts/"],
+  },
 }
