--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,12 +1,13 @@
 {
   "tasks": {
     "serve": "deno run --allow-net --allow-read https://deno.land/std@0.217.0/http/file_server.ts public",
-    "check": "dprint check && deno fmt --check && deno lint && deno check scripts/*.ts",
+    "check": "deno fmt --check && deno lint && deno check scripts/*.ts",
     // If you want to keep stylelint color print in local, Use `unbuffer deno run --node-modules-dir ...`
     "stylelint": "deno task cache && deno run --node-modules-dir --allow-env --allow-read --allow-sys npm:stylelint@16.2.1/stylelint **/*.css | deno run --allow-sys scripts/isEmpty.ts",
+    "check-all": "dprint check && yamlfmt -lint . && deno task stylelint && deno task check",
     "deps": "nix --version && nil --version && deno --version && dprint --version",
     "cache": "deno cache --node-modules-dir npm:stylelint@16.2.1 npm:stylelint-config-recommended@14.0.0",
-    "fmt": "deno fmt && dprint fmt && nix fmt ./*.nix",
+    "fmt": "deno fmt && dprint fmt && yamlfmt . && nix fmt ./*.nix",
   },
   "lint": {
     "include": ["scripts/"],
