--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,8 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "github>kachick/renovate-config-dprint#1.1.0"
+  ],
   "labels": ["dependencies", "renovate"],
-  "enabledManagers": ["nix"],
   "nix": {
-    "enabled": true
+    "enabled": false
   }
 }
