--- a/.github/workflows/update-flake-lock-and-ci.yml
+++ b/.github/workflows/update-flake-lock-and-ci.yml
@@ -14,8 +14,8 @@ jobs:
     uses: kachick/selfup/.github/workflows/reusable-bump-flake-lock-and-selfup.yml@v1.1.3
     if: (github.event.sender.login == 'kachick') || (github.event_name != 'pull_request')
     with:
+      app_id: ${{ vars.APP_ID }}
       dry-run: ${{ github.event_name == 'pull_request' }}
       pr-title: 'Bump flake.lock and related dependencies'
     secrets:
-      APP_ID: ${{ secrets.APP_ID }}
       APP_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
