--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,10 +4,10 @@
     "check": "deno fmt --check && deno lint && deno check scripts/*.ts",
     // If you want to keep stylelint color print in local, Use `unbuffer deno run --node-modules-dir ...`
     "stylelint": "deno task cache && deno run --node-modules-dir --allow-env --allow-read --allow-sys npm:stylelint@16.2.1/stylelint **/*.css | deno run --allow-sys scripts/isEmpty.ts",
-    "check-all": "dprint check && yamlfmt -lint . && deno task stylelint && deno task check",
+    "check-all": "dprint check && deno task stylelint && deno task check",
     "deps": "nix --version && nil --version && deno --version && dprint --version",
     "cache": "deno cache --node-modules-dir npm:stylelint@16.2.1 npm:stylelint-config-recommended@14.0.0",
-    "fmt": "deno fmt && dprint fmt && yamlfmt . && nix fmt ./*.nix",
+    "fmt": "deno fmt && dprint fmt && nix fmt ./*.nix",
   },
   "lint": {
     "include": ["scripts/"],
