Fix workflow syntax

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -56,5 +56,5 @@ jobs:
         with:
           path: 'public'
       - id: deployment
-        if: github.event_name != 'pull_request'
+        if: ${{ github.event_name != 'pull_request' }}
         uses: actions/deploy-pages@v4
