--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,30 +13,36 @@ on:
       - 'deno.jsonc'
   workflow_dispatch:
 
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
-
 jobs:
-  deploy:
+  build:
     timeout-minutes: 15
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    name: Build and deploy
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
         with:
           deno-version: '1.44.3' # selfup {"extract":"\\d[^']+","replacer":["bash","-c","deno --version | head -n 1"],"nth": 2}
       - run: deno task get-dependencies
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'public'
+  deploy:
+    needs: [build]
+    if: ${{ github.event_name != 'pull_request' }}
+    timeout-minutes: 15
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # Allow one concurrent deployment
+    concurrency:
+      group: 'pages'
+      cancel-in-progress: true
+    runs-on: ubuntu-24.04
+    steps:
       - name: Wait other jobs
         uses: kachick/wait-other-jobs@v3
         with:
@@ -52,9 +58,5 @@ jobs:
             ]
         timeout-minutes: 10
       - uses: actions/configure-pages@v5
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: 'public'
       - id: deployment
-        if: ${{ github.event_name != 'pull_request' }}
         uses: actions/deploy-pages@v4
