--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "serve": "deno task get-dependencies && deno run --allow-net --allow-read https://deno.land/std@0.217.0/http/file_server.ts public",
-    "check": "deno fmt --check && deno lint",
+    "check": "deno fmt --check",
     // If you want to keep stylelint color print in local, Use `unbuffer deno run --node-modules-dir ...`
     "stylelint": "deno task cache && stylelint public/*.css",
     "check-all": "dprint check && deno task stylelint && deno task check",
@@ -10,14 +10,7 @@
     "fmt": "deno fmt && dprint fmt && nix fmt ./*.nix",
     "get-dependencies": "mkdir -p public/vendor && curl -OL https://raw.githubusercontent.com/tiaanduplessis/nanoreset/94bad84b5d1044651e333a283af6db2e54648e74/nanoreset.min.css --output-dir public/vendor --output-dir public/vendor",
   },
-  "lint": {
-    "include": ["scripts/"],
-    "rules": {
-      "tags": ["recommended"],
-    },
-  },
   "fmt": {
     "singleQuote": true,
-    "include": ["scripts/"],
   },
 }
