Replace deno fmt with dprint

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,16 +1,12 @@
 {
   "tasks": {
     "serve": "deno task get-dependencies && deno run --allow-net --allow-read https://deno.land/std@0.217.0/http/file_server.ts public",
-    "check": "deno fmt --check",
     // If you want to keep stylelint color print in local, Use `unbuffer deno run --node-modules-dir ...`
     "stylelint": "deno task cache && stylelint public/*.css",
     "check-all": "dprint check && deno task stylelint && deno task check",
     "deps": "nix --version && nil --version && deno --version && dprint --version",
     "cache": "deno cache --node-modules-dir npm:stylelint-config-recommended@14.0.1",
     "fmt": "deno fmt && dprint fmt && nix fmt ./*.nix",
-    "get-dependencies": "mkdir -p public/vendor && curl -OL https://raw.githubusercontent.com/tiaanduplessis/nanoreset/94bad84b5d1044651e333a283af6db2e54648e74/nanoreset.min.css --output-dir public/vendor --output-dir public/vendor",
-  },
-  "fmt": {
-    "singleQuote": true,
-  },
+    "get-dependencies": "mkdir -p public/vendor && curl -OL https://raw.githubusercontent.com/tiaanduplessis/nanoreset/94bad84b5d1044651e333a283af6db2e54648e74/nanoreset.min.css --output-dir public/vendor --output-dir public/vendor"
+  }
 }
