--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,6 +34,7 @@ jobs:
     permissions:
       contents: read
       deployments: write
+      pull-requests: write # Required to post comment
     steps:
       - name: Download build assets
         env:
