--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,7 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "dprint.dprint",
-    "stylelint.vscode-stylelint",
+    "biomejs.biome",
     "denoland.vscode-deno",
     "jnoortheen.nix-ide"
   ]
