--- a/.github/workflows/update-flake-lock-and-ci.yml
+++ b/.github/workflows/update-flake-lock-and-ci.yml
@@ -17,5 +17,7 @@ jobs:
       app_id: ${{ vars.APP_ID }}
       dry-run: ${{ github.event_name == 'pull_request' }}
       pr-title: 'Bump flake.lock and related dependencies'
+      optional-run: |
+        nix develop --command bash -c 'biome migrate --write && dprint fmt'
     secrets:
       APP_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
