--- a/.github/workflows/update-flake-lock-and-ci.yml
+++ b/.github/workflows/update-flake-lock-and-ci.yml
@@ -19,5 +19,6 @@ jobs:
       pr-title: 'Bump flake.lock and related dependencies'
       optional-run: |
         nix develop --command bash -c 'biome migrate --write && dprint fmt'
+        git diff-index --quiet HEAD || git commit -m 'Bump biome.json' biome.json
     secrets:
       APP_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
